k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mern-app-devops
  labels: 
    app: backend
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: backend
  # Templates are specifications for the pod on how it should be created
  template: 
    metadata:
      labels:
        app: backend
    spec:
      containers: 
        - name: backend
          image: backend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe: 
            httpGet: 
              path: /health
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet: 
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3

# Below --- is the yaml document separator, tells that we are writing another new resource in the same file
---

apiVersion: v1
kind: Service
metadata: 
  name: backend
  namespace: mern-app-devops
spec:
  selector: 
    app: backend
  ports: 
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
