k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern-app-devops
  annotations: 
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
spec:
  ingressClassName: nginx
  rules:
    - host: taskdemo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port: 
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: 
                  number: 5173
